[gd_scene load_steps=6 format=2]

[ext_resource path="res://1_Cell/Sprites/health_bar.png" type="Texture" id=1]
[ext_resource path="res://1_Cell/Sprites/energy_bar.png" type="Texture" id=2]
[ext_resource path="res://1_Cell/Sprites/food_bar.png" type="Texture" id=3]
[ext_resource path="res://1_Cell/Scripts/Bodyes.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Bodyes" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="health_bar" type="TextureProgress" parent="."]
margin_left = -16.0
margin_top = -24.0
margin_right = 16.0
margin_bottom = -20.0
value = 50.0
texture_progress = ExtResource( 1 )
fill_mode = 6
nine_patch_stretch = true
__meta__ = {
"_edit_group_": true
}

[node name="energy_bar" type="TextureProgress" parent="."]
margin_left = -24.0
margin_top = -16.0
margin_right = -20.0
margin_bottom = 16.0
value = 50.0
texture_progress = ExtResource( 2 )
fill_mode = 7
nine_patch_stretch = true
__meta__ = {
"_edit_group_": true
}

[node name="food_bar" type="TextureProgress" parent="."]
margin_left = 20.0
margin_top = -16.0
margin_right = 24.0
margin_bottom = 16.0
value = 50.0
texture_progress = ExtResource( 3 )
fill_mode = 7
nine_patch_stretch = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
